example_manifests.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: crlish-authorizer
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.32

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: crlish-authorizer
  name: crlish-authorizer
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: crlish-authorizer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: crlish-authorizer
    spec:
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - crlish-authorizer
      volumes:
        - name: x509
          secret:
            secretName: crlish-authorizer
        - name: conf
          configMap:
            name: crlish-authorizer
      containers:
        - name: server
          image: ghcr.io/menacit/k8s_crlish_authorizer:latest
          ports:
            - name: crlish-https-api
              containerPort: 8443
          volumeMounts:
            - name: x509
              mountPath: /etc/k8s_crlish_authorizer/x509
            - name: conf
              mountPath: /etc/k8s_crlish_authorizer/conf
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 5
            httpGet:
              port: crlish-https-api
              scheme: https
              path: /healthz
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 2
            failureThreshold: 3
            httpGet:
              port: crlish-https-api
              scheme: https
              path: /healthz
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: 250Mi
              cpu: 250m

---
apiVersion: v1
kind: Service                                        
metadata:
  namespace: crlish-authorizer
  name: crlish-authorizer
spec:
  trafficDistribution: PreferClose
  selector:
    app.kubernetes.io/name: crlish-authorizer
  ports:
    - port: 443
      targetPort: crlish-https-api

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: crlish-authorizer
  name: crlish-authorizer
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: crlish-authorizer
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: crlish-https-api
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              tier: control-plane
              component: kube-apiserver
  egress: []
